force-app/main/default/objects/zkmulti__MCShipmate_Preference__c/zkmulti__MCShipmate_Preference__c.object-meta.xml
<CustomObject>
    <label>Shipping Preference</label>
    <nameField>
        <displayFormat>ShippingPreference-{000000}</displayFormat>
        <label>Shipping Preference Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipping Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>