force-app/main/default/objects/zkmulti__MCShipmate_Preference__c/fields/zkmulti__Billing_State__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Billing_State__c</fullName>
    <label>Billing State</label>
    <length>16</length>
    <type>Text</type>
</CustomField>