force-app/main/default/objects/zkmulti__MCShipmate_Preference__c/fields/zkmulti__CarrierAccountDescription__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__CarrierAccountDescription__c</fullName>
    <label>Carrier Account Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>