force-app/main/default/objects/zkmulti__MCShipmate_Preference__c/fields/zkmulti__PhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__PhoneNumber__c</fullName>
    <label>Phone Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>