force-app/main/default/objects/zkmulti__MCShipmate_Preference__c/fields/zkmulti__Sender_Phone_Default__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__Sender_Phone_Default__c</fullName>
    <description>If specified, the sender phone will be defaulted to this value for all users. Otherwise, the sender phone will be the phone number of the user.</description>
    <inlineHelpText>If specified, the sender phone will be defaulted to this value for all users. Otherwise, the sender phone will be the phone number of the user.</inlineHelpText>
    <label>Sender Phone Default</label>
    <length>100</length>
    <type>Text</type>
</CustomField>