force-app/main/default/objects/zkmulti__MCShipmate_Preference__c/fields/zkmulti__ThermalPrinterId__c.field-meta.xml
<CustomField>
    <fullName>zkmulti__ThermalPrinterId__c</fullName>
    <label>Thermal Printer Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>