force-app/main/default/objects/zkmulti__MCShipmate_Preference__c/listViews/zkmulti__All.listView-meta.xml
<ListView>
    <fullName>zkmulti__All</fullName>
    <columns>zkmulti__Carrier__c</columns>
    <columns>NAME</columns>
    <columns>zkmulti__AccountNumber__c</columns>
    <columns>zkmulti__Carrier_Account_Id__c</columns>
    <columns>zkmulti__Shipping_Country__c</columns>
    <columns>zkmulti__Shipping_Street__c</columns>
    <columns>zkmulti__Shipping_Zip_Postal_Code__c</columns>
    <columns>zkmulti__CarrierAccountDescription__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>zkmulti__ScaleWeightUnit__c</columns>
    <columns>zkmulti__Shipping_City__c</columns>
    <columns>zkmulti__Shipping_State__c</columns>
    <columns>zkmulti__Weight_Units_Default__c</columns>
    <columns>zkmulti__Currency_Default__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>