force-app/main/default/objects/zkmulti__MCShipmate_Preference__c/listViews/zkmulti__UPS.listView-meta.xml
<ListView>
    <fullName>zkmulti__UPS</fullName>
    <columns>NAME</columns>
    <columns>zkmulti__Company_Name__c</columns>
    <columns>zkmulti__AccountNumber__c</columns>
    <columns>zkmulti__Carrier__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>zkmulti__CarrierType__c</field>
        <operation>equals</operation>
        <value>zk_api_ups</value>
    </filters>
    <label>UPS</label>
</ListView>